src/objects/ACCL__Org_Unit_Hierarchy__c.object
<CustomObject>
    <description>Holds the detail of the relationship between two org units. Usually used for the sales org unit hierarchy.</description>
    <fields>
        <fullName>ACCL__Child_Org_Level__c</fullName>
        <description>Child Org Level.</description>
        <formula>TEXT(ACCL__Child_Org_Unit__r.ACCL__Org_Level__c)</formula>
        <label>Child Org Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Child_Org_Type__c</fullName>
        <description>Child Org Type.</description>
        <formula>TEXT(ACCL__Child_Org_Unit__r.ACCL__Org_Type__c)</formula>
        <label>Child Org Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Child_Org_Unit__c</fullName>
        <description>Reference to a child org unit in an org unit hierarchy.</description>
        <label>Child Org Unit</label>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>Parent Org Unit Hierarchies</relationshipLabel>
        <relationshipName>Org_Unit_Hierarchies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Description based on the user specific language.</description>
        <formula>ACCL__Parent_Org_Unit__r.ACCL__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Org_Level__c</fullName>
        <description>Parent Org Level.</description>
        <formula>TEXT(ACCL__Parent_Org_Unit__r.ACCL__Org_Level__c)</formula>
        <label>Parent Org Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Org_Type__c</fullName>
        <description>Parent Org Type.</description>
        <formula>TEXT(ACCL__Parent_Org_Unit__r.ACCL__Org_Type__c)</formula>
        <label>Parent Org Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Org_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the parent org unit in an org unit hierachy.</description>
        <label>Parent Org Unit</label>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>Child Org Unit Hierarchies</relationshipLabel>
        <relationshipName>Org_Unit_Hierarchies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Hyperlink to the detail page of the record</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Org Unit Hierarchy</label>
    <nameField>
        <displayFormat>OUH-{0000}</displayFormat>
        <label>Org Unit Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Unit Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same</fullName>
        <active>true</active>
        <description>The Parent Org Unit and the Child Org Unit must have the same Sales Org.</description>
        <errorConditionFormula>TEXT(ACCL__Child_Org_Unit__r.ACCL__Sales_Org__c) &lt;&gt;  TEXT(ACCL__Parent_Org_Unit__r.ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Parent Org Unit and the Child Org Unit must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Same_Parent_Child_Org_Unit</fullName>
        <active>true</active>
        <description>The Child Org Unit and the Parent Org Unit can&apos;t be the same.</description>
        <errorConditionFormula>ACCL__Child_Org_Unit__c = ACCL__Parent_Org_Unit__c</errorConditionFormula>
        <errorMessage>The Child Org Unit and the Parent Org Unit can&apos;t be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>